# xarm-grpc

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  xarm_commander.cc  xarm_daemon.cc  xarm_grpc_service.cc
.github/actions/clang-format/: Dockerfile  action.yml  entrypoint.sh
.github/actions/clang-tidy/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: docker-build.yml  format-lint.yml  lint-test.yml
evaluation/: latency-connection.py
examples/: bash_routine.sh  node_async.js  node_promise.js
lib/test/: myclass.cpp  myclass.h
protos/: xapi.proto
src/: commander.cpp  xarm-commander.cpp  xarm-commander.js  xarm-test.js
src/examples/: xarm-counter.js  xarm-move.js  xarm-state.js  xarm-test.js
src/logger/: easylogging++.cc
src/test/: commander-test.js  swig-test.js
swig/: binding.gyp  xarm.i
swig/test/: binding.gyp  mylib.i  mylib_wrap.cxx
tools/xarm-commander/: README.md  xarm_commander.cc
tools/xarm-commander/examples/: node_promise.js  routine.sh
